--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2,185 +2,110 @@ body {
   font-family: 'Noto Sans', sans-serif;
 }
 
-
-.footer a {
-    /*font-size: 25px;*/
-    color: #000;
-}
-
-.large-font {
-    font-size: 25px;
+.footer .icon-link {
+  font-size: 25px;
+  color: #000;
 }
 
 .link-block a {
-    margin-top: 5px;
-    margin-bottom: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .dnerf {
   font-variant: small-caps;
 }
 
-
 .teaser .hero-body {
   padding-top: 0;
-  padding-bottom: 1rem;
+  padding-bottom: 3rem;
 }
 
 .teaser {
   font-family: 'Google Sans', sans-serif;
 }
 
-
-.publication-title {
+.card {
+  box-shadow: 0px 4px 10px 3px rgba(0, 0, 0, 0.3);
+  padding: 16px;
+  margin: auto;
+  text-align: center;
+  background-color: #f2f2f2;
+  border-radius: 12px;
 }
 
-.publication-banner {
-  max-height: parent;
-
+/* Sliding show */
+* {
+  box-sizing: border-box
 }
 
-.publication-banner video {
+.slideshow-container {
+  max-width: 2000px;
   position: relative;
-  left: auto;
-  top: auto;
-  transform: none;
-  object-fit: fit;
+  margin: auto;
 }
 
-.publication-header .hero-body {
+.mySlides0 {
+  display: none;
 }
 
-.publication-title {
-    font-family: 'Google Sans', sans-serif;
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: black;
+  font-weight: bold;
+  font-size: 30px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  background-color: rgba(200, 200, 200, 0.65);
 }
 
-.publication-authors {
-    font-family: 'Google Sans', sans-serif;
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
 
-.publication-venue {
-    color: #555;
-    width: fit-content;
-    font-weight: bold;
+.prev:hover,
+.next:hover {
+  background-color: rgba(64, 64, 64, 0.8);
 }
 
-.publication-awards {
-    color: #ff3860;
-    width: fit-content;
-    font-weight: bolder;
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
 }
 
-.publication-authors {
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
 }
 
-.publication-authors a {
-   color: hsl(204, 86%, 53%) !important;
-}
-
-.publication-authors a:hover {
-    text-decoration: underline;
-}
-
-.author-block {
+.dot0 {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 1px;
+  background-color: #bbb;
+  border-radius: 50%;
   display: inline-block;
+  transition: background-color 0.6s ease;
 }
 
-.publication-banner img {
+.active,
+.dot0:hover {
+  background-color: #717171;
 }
-
-.publication-authors {
-  /*color: #4286f4;*/
-}
-
-.publication-video {
-    position: relative;
-    width: 70%;
-    height: 0;
-    padding-bottom: 50.0%;
-    margin: auto;
-    overflow: hidden;
-    border: 2px solid #bbb;
-    border-radius: 10px !important;
-}
-
-.publication-video iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.publication-body img {
-}
-
-.results-carousel {
-  overflow: hidden;
-}
-
-.results-carousel .item {
-  margin: 5px;
-  overflow: hidden;
-  border: 1px solid #bbb;
-  border-radius: 10px;
-  padding: 0;
-  font-size: 0;
-}
-
-.results-carousel video {
-  margin: 0;
-}
-
-
-/* .interpolation-panel {
-  background: #f5f5f5;
-  border-radius: 10px;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  padding-left: 15px;
-  padding-right: 15px;
-} */
-.interpolation-panel {
-  background: #f5f5f5;
-  border-radius: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-
-
-.interpolation-panel .interpolation-image {
-  width: 100%;
-  border-radius: 5px;
-}
-
-.interpolation-video-column {
-}
-
-.interpolation-panel .slider {
-  margin: 0 !important;
-}
-
-.interpolation-panel .slider {
-  margin: 0 !important;
-}
-
-#interpolation-image-wrapper {
-  width: 100%;
-}
-#interpolation-image-wrapper img {
-  border-radius: 5px;
-}
-
-.bottom_buttons[disabled] {
-  opacity: .4;
-}
-
-.brmod {
-  display: block;
-  margin-top: 0.5em;
-}
-
